--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina de vendas</h1>
-    <p>vendas = R$5000,00</p>
+    <h1>Pagina de Blog</h1>
+    <h2>post número 1</h2>
     <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
