--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Pagina de Blog</h1>
     <h2>post número 1</h2>
+    <h2>post número 2</h2>
     <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
